--- a/app/package.json
+++ b/app/package.json
@@ -5,7 +5,8 @@
   "description": "IEQ2 Backend",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon app.js"
+    "dev": "nodemon app.js",
+    "start": "node app.js"
   },
   "author": "R.J. Rietdijk",
   "license": "ISC",
