--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,6 +13,14 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+      uses: actions/checkout@v3
+
+    - name: Login to GitHub Container Registry
+      run: echo ${{ secrets.GITHUB_TOKEN }} | docker login docker.pkg.github.com -u ${{ github.repository_owner }}
+
+    - name: Build Docker Image
+      run: docker build -t docker.pkg.github.com/${{ github.repository }}/ieg06_backend:$(date +%s) -f Dockerfile .
+
+    - name: Push Docker Image
+      run: docker push docker.pkg.github.com/${{ github.repository }}/ieg06_backend:$(date +%s)
