--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,11 +16,11 @@ jobs:
     - name: Build the Docker image
       uses: actions/checkout@v3
 
-    - name: Login to GitHub Container Registry
+    - name: Login to GitHub Container Registry, Build and Push image
       run: echo ${{ secrets.GITHUB_TOKEN }} | docker login docker.pkg.github.com -u ${{ github.repository_owner }} --password-stdin
 
-    - name: Build Docker Image
-      run: docker build -t docker.pkg.github.com/${{ github.repository }}/ieg06_backend:$(date +%s) -f Dockerfile .
-
-    - name: Push Docker Image
-      run: docker push docker.pkg.github.com/${{ github.repository }}/ieg06_backend:$(date +%s)
+    - name: Build Docker Image and Push
+      run: |
+        repo_name_lowercase=$(echo "${{ github.repository }}" | tr '[:upper:]' '[:lower:]')
+        docker build -t docker.pkg.github.com/$repo_name_lowercase/ieg06_backend:$(date +%s) -f Dockerfile .
+        docker push docker.pkg.github.com/$repo_name_lowercase/ieg06_backend:$(date +%s)
