--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -22,6 +22,7 @@ jobs:
     - name: Build Docker Image and Push
       run: |
         repo_name_lowercase=$(echo "${{ github.repository }}" | tr '[:upper:]' '[:lower:]')
+        commit_hash=$(git rev-parse --short HEAD)
         image_name_lowercase="ieg06_backend:${commit_hash}"
         docker build -t docker.pkg.github.com/$repo_name_lowercase/$image_name_lowercase -f Dockerfile .
         docker push docker.pkg.github.com/$repo_name_lowercase/$image_name_lowercase
