--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -26,3 +26,10 @@ jobs:
         image_name_lowercase="ieg06_backend:${commit_hash}"
         docker build -t docker.pkg.github.com/$repo_name_lowercase/$image_name_lowercase -f Dockerfile .
         docker push docker.pkg.github.com/$repo_name_lowercase/$image_name_lowercase
+
+    - name: Update 'latest' tag
+      run: |
+        repo_name_lowercase=$(echo "${{ github.repository }}" | tr '[:upper:]' '[:lower:]')
+        commit_hash=$(git rev-parse --short HEAD)
+        docker tag docker.pkg.github.com/$repo_name_lowercase/ieg06_backend:${commit_hash} docker.pkg.github.com/$repo_name_lowercase/ieg06_backend:latest
+        docker push docker.pkg.github.com/$repo_name_lowercase/ieg06_backend:latest
