--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,9 @@
 version: '3'
 services:
   app:
-    build: 
-      context: .
-      dockerfile: Dockerfile
-    image: node:latest  # Use an appropriate Node.js version
-    container_name: ieq2_backend
-    working_dir: /app
+    image: ghcr.io/robinrietdijk/ieq2_backend/ieg06_backend:latest
     ports:
-      - "3001:3001"  # Change the port if your app uses a different one
+      - "3001:3001"
     environment:
       - NODE_ENV=production
       - PORT=3001
-    command: npm start
