--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,20 +16,29 @@ jobs:
     - name: Build the Docker image
       uses: actions/checkout@v3
 
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
+
     - name: Login to GitHub Container Registry, Build and Push image
       run: echo ${{ secrets.GITHUB_TOKEN }} | docker login docker.pkg.github.com -u ${{ github.repository_owner }} --password-stdin
-
-    - name: Build Docker Image and Push
+  
+    - name: Set repository name to lowercase
+      id: set-repo-name
       run: |
-        repo_name_lowercase=$(echo "${{ github.repository }}" | tr '[:upper:]' '[:lower:]')
-        commit_hash=$(git rev-parse --short HEAD)
-        image_name_lowercase="ieg06_backend:${commit_hash}"
-        docker build -t docker.pkg.github.com/$repo_name_lowercase/$image_name_lowercase -f Dockerfile .
-        docker push docker.pkg.github.com/$repo_name_lowercase/$image_name_lowercase
+        repo_name_lowercase=$(echo ${{ github.repository }} | tr '[:upper:]' '[:lower:]')
+        echo "::set-output name=repo_name_lowercase::$repo_name_lowercase"
 
-    - name: Update 'latest' tag
+    - name: Get commit hash
+      id: get-commit-hash
       run: |
-        repo_name_lowercase=$(echo "${{ github.repository }}" | tr '[:upper:]' '[:lower:]')
         commit_hash=$(git rev-parse --short HEAD)
-        docker tag docker.pkg.github.com/$repo_name_lowercase/ieg06_backend:${commit_hash} docker.pkg.github.com/$repo_name_lowercase/ieg06_backend:latest
-        docker push docker.pkg.github.com/$repo_name_lowercase/ieg06_backend:latest
+        echo "::set-output name=commit_hash::$commit_hash"
+
+    - name: Build and push multi-architecture image
+      uses: docker/build-push-action@v2
+      with:
+        context: .
+        file: ./Dockerfile
+        platforms: linux/amd64,linux/arm64
+        push: true
+        tags: ghcr.io/${{ github.repository_owner }}/${{ steps.set-repo-name.outputs.repo_name_lowercase }}:${{ steps.get-commit-hash.outputs.commit_hash }}, ghcr.io/${{ github.repository_owner }}/${{ steps.set-repo-name.outputs.repo_name_lowercase }}:latest
