--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -38,6 +38,20 @@ jobs:
     - name: Set commit hash in environment file
       run: echo "COMMIT_HASH=${COMMIT_HASH}" >> $GITHUB_ENV
 
+    - name: Debug - Print Environment Variables
+      run: |
+        echo "COMMIT_HASH: $COMMIT_HASH"
+        echo "REPO_OWNER: $REPO_OWNER"
+        echo "REPO_NAME: $REPO_NAME"
+        echo "REPO_OWNER_LOWER: $REPO_OWNER_LOWER"
+        echo "REPO_NAME_LOWER: $REPO_NAME_LOWER"
+      env:
+        COMMIT_HASH: ${{ github.sha }}
+        REPO_OWNER: ${{ github.repository_owner }}
+        REPO_NAME: ${{ github.repository_name }}
+        REPO_OWNER_LOWER: ${{ env.REPO_OWNER_LOWER }}
+        REPO_NAME_LOWER: ${{ env.REPO_NAME_LOWER }}
+
     - name: Build and push multi-architecture image
       uses: docker/build-push-action@v2
       with:
