--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -39,4 +39,4 @@ jobs:
         file: ./Dockerfile
         platforms: linux/amd64,linux/arm64
         push: true
-        tags: ghcr.io/${{ env.REPO_LOWER }}:${{ env.COMMIT_HASH }},ghcr.io/${{ env.REPO_LOWER }}:latest
+        tags: docker.pkg.github.com/${{ env.REPO_LOWER }}:${{ env.COMMIT_HASH }},docker.pkg.github.com/${{ env.REPO_LOWER }}:latest
