--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -11,7 +11,6 @@ jobs:
   build-and-push:
     runs-on: ubuntu-latest
     env:
-      COMMIT_HASH: $(git rev-parse --short HEAD)
       REPO: ${{ github.repository }}
 
     steps:
@@ -34,7 +33,7 @@ jobs:
         echo "REPO_LOWER=${repo_lowercase}" >> $GITHUB_ENV
 
     - name: Set commit hash in environment file
-      run: echo "COMMIT_HASH=${COMMIT_HASH}" >> $GITHUB_ENV
+      run: echo "COMMIT_HASH=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
 
     - name: Build and push multi-architecture image
       uses: docker/build-push-action@v5
