--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -43,3 +43,5 @@ jobs:
         platforms: linux/amd64,linux/arm64,linux/arm
         push: true
         tags: ghcr.io/${{ env.REPO_LOWER }}:${{ env.COMMIT_HASH }},ghcr.io/${{ env.REPO_LOWER }}:latest
+        secrets: |
+          "gptAPIKey=${{ secrets.GPTAPIKEY }}"
