--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3'
 services:
   app:
     image: ghcr.io/robinrietdijk/ieq2_backend/ieg06_backend:latest
+    container_name: ieq2g06_backend
     ports:
       - "3001:3001"
     environment:
