--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,13 @@
 version: '3'
 services:
-  app:
+  ieq2g06_backend:
     image: ghcr.io/robinrietdijk/ieq2_backend/ieg06_backend:latest
     container_name: ieq2g06_backend
-    ports:
-      - "3001:3001"
     environment:
       - NODE_ENV=production
       - PORT=3001
+
+networks:
+  default:
+    external: true
+    name: web_main
