--- a/package.json
+++ b/package.json
@@ -1,6 +1,24 @@
 {
+  "name": "ieq2_backend",
+  "version": "1.0.0",
+  "type": "module",
+  "description": "IEQ2 Backend",
+  "main": "index.js",
+  "scripts": {
+    "dev": "nodemon app.js",
+    "start": "node app.js"
+  },
+  "author": "R.J. Rietdijk",
+  "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
-    "cors": "^2.8.5"
+    "chatgpt": "^5.2.5",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "http": "^0.0.1-security",
+    "jsonwebtoken": "^9.0.2",
+    "nodemon": "^3.0.1",
+    "socket.io": "^4.7.2",
+    "winston": "^3.11.0"
   }
 }
