--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "description": "IEQ2 Backend",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon app.js",
-    "start": "node app.js"
+    "dev": "nodemon src/app.js",
+    "start": "node src/app.js"
   },
   "author": "R.J. Rietdijk",
   "license": "ISC",
