--- a/package.json
+++ b/package.json
@@ -20,13 +20,12 @@
     ]
   },
   "scripts": {
-    "start": "npm run prod",
+    "start": "npm run server",
     "build": "npm-run-all clean transpile",
-    "server": "node ./dist-server/bin/www",
+    "server": "node ./dist/bin/www",
     "dev": "NODE_ENV=development npm-run-all build server",
-    "prod": "NODE_ENV=production npm-run-all build server",
-    "transpile": "babel ./server --out-dir dist-server",
-    "clean": "rimraf dist-server",
+    "transpile": "babel ./server --out-dir dist",
+    "clean": "rimraf dist",
     "watch:dev": "nodemon"
   },
   "dependencies": {
