--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "babel": {
     "presets": [
-      "@babel/preset-env"
+      ["@babel/preset-env", {
+        "exclude": ["proposal-dynamic-import"]
+      }]
     ]
   },
   "nodemonConfig": {
@@ -35,6 +37,7 @@
     "@socket.io/admin-ui": "^0.5.1",
     "0g": "^0.0.9",
     "chalk": "^4.1.2",
+    "chatgpt": "^5.2.5",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
