--- a/package.json
+++ b/package.json
@@ -4,9 +4,14 @@
   "private": true,
   "babel": {
     "presets": [
-      ["@babel/preset-env", {
-        "exclude": ["proposal-dynamic-import"]
-      }]
+      [
+        "@babel/preset-env",
+        {
+          "exclude": [
+            "proposal-dynamic-import"
+          ]
+        }
+      ]
     ]
   },
   "nodemonConfig": {
@@ -41,7 +46,9 @@
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "hex-color-to-color-name": "^1.0.2",
     "http": "^0.0.1-security",
     "morgan": "~1.9.1",
     "nodemon": "^3.0.1",
