--- a/package.json
+++ b/package.json
@@ -53,6 +53,8 @@
     "morgan": "~1.9.1",
     "nodemon": "^3.0.1",
     "npm-run-all": "^4.1.5",
+    "puppeteer": "^21.6.1",
+    "qrcode": "^1.5.3",
     "rimraf": "^5.0.5",
     "socket.io": "^4.7.2",
     "winston": "^3.11.0",
