--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "hex-color-to-color-name": "^1.0.2",
     "http": "^0.0.1-security",
     "morgan": "~1.9.1",
+    "mqtt": "^5.3.3",
     "nodemon": "^3.0.1",
     "npm-run-all": "^4.1.5",
     "puppeteer": "^21.6.1",
